# gtk-encryption-app-sample

./: CMakeLists.txt  README.md  css_styles.h  input_transformer.c  input_transformer.h  main.c  mw_actions.c  mw_actions.h  mw_context.c  mw_context.h
design/: css_data.h
main_window/: input_transformer.c  input_transformer.h  mw_actions.c  mw_actions.h  mw_context.c  mw_context.h
utils/: gtk_helpers.c  gtk_helpers.h  hexparse.c  hexparse.h
